# mini-tortoise-tts

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
src/mini_tortoise_tts/: __init__.py  config.py  load_voices.py  text_to_speech.py  turtle_agent.py
src/mini_tortoise_tts/gpt/: __init__.py  gpt2_model_null_embeddings.py  gpt_2_inference_model.py
src/mini_tortoise_tts/torch_modules/: __init__.py  attention_block.py  conditioning_encoder.py  hifigan_generator.py  mel_encoder.py  res_block.py  torch_mel_spectrogram.py  unified_voice.py
src/mini_tortoise_tts/torch_tokenizers/: __init__.py  voice_bpe_tokenizer.py
src/mini_tortoise_tts/transformers/: __init__.py  typical_logits_warper.py
src/mini_tortoise_tts_scripts/: do_tts.py
tests/text_to_speech/torch_tokenizers/: test_voice_bpe_tokenizer.py
text_to_speech/: __init__.py  config.py  load_voices.py  rvc_infer.py  text_to_speech.py
text_to_speech/.data/build_ins/: tokenizer.json
text_to_speech/gpt/: __init__.py  gpt2_model_null_embeddings.py  learned_position_embeddings.py
text_to_speech/tokenizers/: __init__.py  voice_bpe_tokenizer.py
text_to_speech/torch_modules/: __init__.py  attention_block.py  conditioning_encoder.py  hifigan_generator.py  mel_encoder.py  qkv_attention_legacy.py  relative_position_bias.py  torch_mel_spectrogram.py  unified_voice.py
text_to_speech/transformers/: __init__.py
