[project]
name="mini-tortoise-tts"
version="1.0"
requires-python = ">=3.8"
authors = [
    {name="Andrew Reed", email="andrewreed2017@icloud.com"}
]
maintainers = [
    {name="Andrew Reed", email="andrewreed2017@icloud.com"}
]
readme = {file = "README.md", content-type = "text/markdown"}
dependencies=[
    "torch>=2.4.0",
    "torchaudio",
    "transformers",
    "tokenizers",
    "Unidecode>=1.3.8",
    "inflect>=7.3.1",
    "psutil>=6.0.0",
    "librosa",
    "huggingface_hub",
    "einops"
]

[project.optional-dependencies]
testing = ["pytest"]

[project.scripts]
do-tts = "do_tts:start()"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]
